--- a/config/source-quickstart-sqlite.properties
+++ b/config/source-quickstart-sqlite.properties
@@ -4,7 +4,7 @@ tasks.max=10
 
 connection.user=cloudera-scm
 connection.password=y6jOvCiNAz
-connection.url=jdbc:postgresql://35.185.102.113:7432/postgres?user=cloudera-scm&password=y6jOvCiNAz&ssl=false
+connection.url=jdbc:postgresql://cloudera-vm:7432/postgres?user=cloudera-scm&password=y6jOvCiNAz&ssl=false
 mode=incrementing
 incrementing.column.name=id
 
